<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/details_page"
    android:windowSoftInputMode="adjustPan">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Details"
        android:textStyle="bold"
        android:background="#4682B4"

        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="23dp"
        android:fontFamily="@font/"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="Date"
        android:textColor="#91B2C7"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="date"
        android:textSize="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="#91B2C7"
        android:textStyle="bold"
        android:id="@+id/ddate"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="Time"
        android:textColor="#91B2C7"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="time"
        android:textColor="#91B2C7"
        android:textStyle="bold"
        android:id="@+id/dtime"/>
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="5dp"
        android:text="Systolic Pressure"
        android:textColor="#91B2C7"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="ss"
        android:textColor="#91B2C7"
        android:textStyle="bold"
        android:id="@+id/dss"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="Diastolic Pressure"
        android:textColor="#91B2C7"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="ds"
        android:textColor="#91B2C7"
        android:textStyle="bold"
        android:id="@+id/dds"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="Heart Beat"
        android:textColor="#91B2C7"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="hb"
        android:textColor="#91B2C7"
        android:textStyle="bold"
        android:id="@+id/dhb"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="Comment"
        android:textColor="#91B2C7"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="comment"
        android:textColor="#91B2C7"
        android:textStyle="bold"
        android:id="@+id/dcomment"/>

</LinearLayout>