<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/edit_page"
    android:windowSoftInputMode="adjustPan">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Edit Details"
        android:textStyle="bold"
        android:background="#4682B4"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="25dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="Date"
        android:textColor="#91B2C7"
        android:textStyle="bold"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="#91B2C7"
        android:backgroundTint="#91B2C7"
        android:gravity="center"
        android:hint="dd-mm-yyyy"
        android:id="@+id/Edate"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="Time"
        android:textColor="#91B2C7"
        android:textStyle="bold"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="#91B2C7"
        android:backgroundTint="#91B2C7"
        android:gravity="center"
        android:hint="hh:mm"
        android:id="@+id/Etime"
        />
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="5dp"
        android:text="Systolic Pressure"
        android:textColor="#91B2C7"
        android:textStyle="bold"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="#91B2C7"
        android:backgroundTint="#91B2C7"
        android:gravity="center"
        android:id="@+id/Ess" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="Diastolic Pressure"
        android:textColor="#91B2C7"
        android:textStyle="bold"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="#91B2C7"
        android:backgroundTint="#91B2C7"
        android:gravity="center"
        android:id="@+id/Eds"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="Heart Beat"
        android:textColor="#91B2C7"
        android:textStyle="bold"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="#91B2C7"
        android:backgroundTint="#91B2C7"
        android:gravity="center"
        android:id="@+id/Ehb"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="Comment"
        android:textColor="#91B2C7"
        android:textStyle="bold"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="#91B2C7"
        android:backgroundTint="#91B2C7"
        android:gravity="center"
        android:id="@+id/Ecomment" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Edit"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="#C7A691"
        android:textSize="21dp"
        android:gravity="center"
        android:textStyle="bold"
        android:id="@+id/editbtn"
        android:background="@drawable/design"/>



</LinearLayout>