<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/addpage"
    android:windowSoftInputMode="adjustPan">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Enter Details"
        android:textStyle="bold"
...
        android:textColor="#91B2C7"
        android:backgroundTint="#91B2C7"
        android:gravity="center"
        android:hint="Up to 20 charecters"
        android:id="@+id/comment" />
    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/design"
...
